--- a/NewtonsCradle/NewtonsCradle.vcxproj.filters
+++ b/NewtonsCradle/NewtonsCradle.vcxproj.filters
@@ -77,5 +77,8 @@
     <ClInclude Include="ImmovableObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Constants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
